<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.cdh.bebetter.views.NoSwipeViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--    <View-->
<!--        android:id="@+id/divider"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@color/purple_500" />-->

    <RadioGroup
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:background="@color/bottom_bar_bg"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <RadioButton
            android:layout_marginStart="20dp"
            android:id="@+id/rb_memo"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/memo"
            android:textColor="@color/test"/>

        <RadioButton
            android:id="@+id/rb_foot"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/foot"
            android:textColor="@color/test"/>

        <RadioButton
            android:id="@+id/rb_user"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/user"
            android:textColor="@color/test"/>

        <RadioButton
            android:id="@+id/rb_my"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:button="@null"
            android:text="@string/my"
            android:textColor="@color/test"/>

    </RadioGroup>


</LinearLayout>