<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/divider"
    tools:context=".activity.MemoEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">
            <com.cdh.bebetter.views.FontIconView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backIcon"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:textSize="30sp"/>
            <com.cdh.bebetter.views.FontIconView
                android:id="@+id/saveMemoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/saveIcon"
                android:gravity="end"
                android:layout_marginStart="245dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:id="@+id/memoEditSortTitleCardView"
            android:layout_width="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:layout_height="21dp">
            <TextView
                android:id="@+id/memoItemSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:drawableRight="@drawable/ic_allow_down_15dp"
                android:text="分类"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/completeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"/>
                <EditText
                    android:id="@+id/memoContent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/memo_content_hint" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/startTimeEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text=" 开始时间"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/ic_start_time_22dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:id="@+id/deadlineEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_deadline_22dp"
                android:text=" 截止时间"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp">
            <EditText
                android:id="@+id/noteEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/ic_note_22dp"
                android:hint=" 备注"
                android:paddingStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/likeMemoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/blank"
        app:backgroundTint="@color/blank"
        android:src="@drawable/ic_dianzan_black_26dp" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/deleteMemoItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:backgroundTint="@color/blank"
        app:backgroundTint="@color/blank"
        android:layout_marginBottom="70dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_delete_black_26dp" />


  </android.support.design.widget.CoordinatorLayout>